# OrchestrationBench

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml
config/: bedrock.yaml  claude.yaml  gemini.yaml  openai.yaml  opensource_api.yaml  opensource_vllm.yaml
config/base_config/: eval_config.yaml  multiagent_config.yaml
data/EN/multiagent_cards/: calendar_agent.json  counsel_agent.json  delivery_agent.json  entertainment_agent.json  finance_agent.json  life_info_agent.json  message_agent.json  news_agent.json  person_agent.json  personal_banking_agent.json  place_agent.json  search_agent.json  shopping_agent.json  sports_agent.json  transport_agent.json  travel_agent.json  weather_agent.json
data/EN/scenario_data/: 1.yaml  10.yaml  100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  11.yaml  110.yaml  111.yaml  112.yaml  113.yaml  114.yaml  115.yaml  116.yaml  117.yaml  118.yaml  119.yaml  12.yaml  120.yaml  121.yaml  122.yaml  123.yaml  124.yaml  125.yaml  126.yaml  127.yaml  128.yaml  129.yaml  13.yaml  130.yaml  131.yaml  132.yaml  133.yaml  134.yaml  (+179 more)
data/KO/multiagent_cards/: calendar_agent.json  counsel_agent.json  delivery_agent.json  entertainment_agent.json  finance_agent.json  life_info_agent.json  message_agent.json  news_agent.json  person_agent.json  personal_banking_agent.json  place_agent.json  search_agent.json  shopping_agent.json  sports_agent.json  transport_agent.json  travel_agent.json  weather_agent.json
data/KO/scenario_data/: 1.yaml  10.yaml  100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  11.yaml  110.yaml  111.yaml  112.yaml  113.yaml  114.yaml  115.yaml  116.yaml  117.yaml  118.yaml  119.yaml  12.yaml  120.yaml  121.yaml  122.yaml  123.yaml  124.yaml  125.yaml  126.yaml  127.yaml  128.yaml  129.yaml  13.yaml  130.yaml  131.yaml  132.yaml  133.yaml  134.yaml  (+182 more)
docs/: result_format.json  result_format.md
integration/: __init__.py  cli.py  config.py  task.py  utils.py  vllm.py
src/: evaluation.py  orchestration_engine.py  step_history_generator.py  stepwise_scenario_processor.py
src/agents/: base_agent.py  llm_agent.py  orchestration_agent.py
src/models/: __init__.py  anthropic_models.py  base_model.py  bedrock_models.py  gemini_models.py  openai_models.py  opensource_models.py  pricing.py
src/utils/: __init__.py  config_loader.py  data_loader.py  model_factory.py  shared_types.py  token_tracker.py  toolcall_fetcher.py  type_utils.py
src/utils/evaluation/: eval_utils.py  evaluate_arguments.py  evaluate_workflow_as_DAG.py
